<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/todo_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email_header_todo"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <ListView
        android:id="@android:id/list"
        android:layout_width="fill_parent"
        android:layout_height="127dp"
        android:layout_weight="0.30"
        android:choiceMode="multipleChoice" />

    <TextView
        android:id="@+id/archive_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email_header_archive"
        android:textAppearance="?android:attr/textAppearanceLarge" />
    
    <ListView
        android:id="@+id/archive_listEmail"
        android:layout_width="fill_parent"
        android:layout_height="127dp"
        android:layout_weight="0.30"
        android:choiceMode="multipleChoice" />

    <Button
        android:id="@+id/button3"
        android:layout_width="match_parent"
        android:layout_height="32dp"
        android:layout_weight="0.05"
        android:text="@string/buttonEmailAll" />

</LinearLayout>