<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >
<EditText
        android:id="@+id/edit_message"
        android:layout_width="230dp"
        android:layout_height="wrap_content"
        android:hint="@string/edit_message" />

     <Button
         android:id="@+id/button_add"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_alignBottom="@+id/edit_message"
         android:layout_toRightOf="@+id/edit_message"
         android:text="@string/button_add" />

     <TextView 
        android:id="@android:id/empty"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/edit_message"
        android:text="@string/string_empty"
        android:gravity="center_horizontal"/>
     
     <ListView
         android:id="@+id/list"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/edit_message"
         android:choiceMode="multipleChoice"/>
    


</RelativeLayout>
